# licita-verify

./: .dockerignore  .env.local  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
.atl/: .skill-registry.cache.json  skill-registry.md
agent/: .env.example  .gitignore  package-lock.json  package.json
agent/src/: agent.ts  arkiv-tools.ts  formatters.ts  index.ts  mcp-client.ts
arkiv-mcp/: .env.example  .gitignore  pyproject.toml
arkiv-mcp/src/: server.py
docs/: product.md
docs/userflows/: licitaverify-flujo-1-admin-institucional.md  licitaverify-flujo-2-ciudadano-auditor-nlq.md
frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/agent/: bot.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/dashboard/: dashboard-client.tsx  page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/api/ai/extract/: route.ts
frontend/app/buscar/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/licitacion/[entityKey]/: page.tsx
frontend/app/manual/: page.tsx
frontend/components/: AiExtractModal.tsx  ChatBot.tsx  FilterChips.tsx  FilterPanel.tsx  QueryTranslator.tsx  ResultCard.tsx  SearchBar.tsx
frontend/components/ui/: ConfidenceBadge.tsx  CopyButton.tsx  CopyValue.tsx  FieldError.tsx  FileUpload.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  textarea.tsx
frontend/lib/: ai-search.ts  ai.ts  auth.ts  hash.ts  validacion.ts
frontend/lib/arkiv/: client.ts  entities.ts
(+11 files in other folders)
