[project]
name = "arkiv-mcp"
version = "1.0.0"
description = "MCP server for Arkiv blockchain — query procurement data"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
dev = "src.server:main"

[dependency-groups]
dev = []
